service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
  - port: 80
    targetPort: 8000
  type: NodePort
